--- a/app/assets/javascripts/templates/call/new_contact.html.erb
+++ b/app/assets/javascripts/templates/call/new_contact.html.erb
@@ -25,7 +25,7 @@
             </p>
             <p>
               Is this a good time to talk briefly?
-              <a ng-click="update_call('new_contact', 'must_callback')">
+              <a ng-click="update_call('new_contact', 'must_callback_to_talk')">
                 (Call Later)
               </a>
             </p>
@@ -47,7 +47,7 @@
             </p>
             <p>
               Is this a good time to talk briefly?
-              <a ng-click="update_call('new_contact', 'must_callback')">
+              <a ng-click="update_call('new_contact', 'must_callback_to_talk')">
                 (Call Later)
               </a>
             </p>
