--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -224,7 +224,7 @@ body > footer {
           color: #555;
           background-color: #fff;
           font-size: 14px;
-          height: 75px;
+          height: 100px;
           &.none {
             color: #999;
           }
@@ -240,6 +240,15 @@ body > footer {
           }
           &.maintain {
             border-left-color: #ffd190;
+          }
+          .callback-when {
+            font-size: 10px;
+            padding: 5px 10px;
+            background-color: lighten(#ebebeb, 10%);
+            border-top: 1px solid #ebebeb;
+            margin-left: -10px;
+            margin-right: -15px;
+            margin-top: 10px;
           }
         }
         > div {
