--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -249,6 +249,7 @@ body > footer {
             margin-left: -10px;
             margin-right: -15px;
             margin-top: 10px;
+            height: 25px;
           }
         }
         > div {
