--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -11,22 +11,25 @@
           <i class="fa fa-times"></i>
         </a>
       </div>
-      <ul class="nav navbar-nav topbar">
-        <li ui-sref-active="active">
-          <a class="contact new" ui-sref="contacts.new">
-            <i class="fa fa-plus"></i>
-          </a>
-        </li>
-        <li ui-sref-active="active" ng-repeat="contact in contacts">
-          <a class="contact" ui-sref="contacts.show({contactId: contact.id})">
-            <i class="fa fa-user"></i>
-            {{contact.first_name}} {{contact.last_name}}
-          </a>
-          <a class="closetab" ng-click="closeTab(contact.id)">
-            <i class="fa fa-times"></i>
-          </a>
-        </li>
-      </ul>
+      <div class="nav-container">
+        <ul class="nav navbar-nav topbar">
+          <li ui-sref-active="active">
+            <a class="contact new" ui-sref="contacts.new">
+              <i class="fa fa-plus"></i>
+              <i class="fa fa-user"></i>
+            </a>
+          </li>
+          <li ui-sref-active="active" ng-repeat="contact in contacts">
+            <a class="closetab" ng-click="closeTab(contact.id)">
+              <i class="fa fa-times"></i>
+            </a>
+            <a class="contact" ui-sref="contacts.show({contactId: contact.id})">
+              <i class="fa fa-user"></i>
+              {{contact.first_name}} {{contact.last_name}}
+            </a>
+          </li>
+        </ul>
+      </div>
       <ul class="nav navbar-nav navbar-right">
       </ul>
     </div>
