--- a/app/assets/javascripts/templates/contacts/appointments/index.html.erb
+++ b/app/assets/javascripts/templates/contacts/appointments/index.html.erb
@@ -10,7 +10,7 @@
   &nbsp;
   <i class="fa fa-calendar-o"></i>
   &nbsp;
-  Appointments with {{contact.first_name}}
+  Appointments
 </h4>
 <div class="set_appointment clearfix" ng-repeat="appointment in appointments">
   <div class="date">
