--- a/app/assets/javascripts/templates/contacts/appointments/new.html.erb
+++ b/app/assets/javascripts/templates/contacts/appointments/new.html.erb
@@ -5,7 +5,7 @@
   </a>
   <i class="fa fa-calendar-o"></i>
   &nbsp;
-  Appointment with {{contact.first_name}}
+  New Appointment
 </h4>
 <form novalidate ng-submit="createAppointment()" name="form">
   <div class='row'>
