--- a/app/assets/javascripts/templates/contacts/appointments/show.html.erb
+++ b/app/assets/javascripts/templates/contacts/appointments/show.html.erb
@@ -5,7 +5,7 @@
   &nbsp;
   <i class="fa fa-calendar-o"></i>
   &nbsp;
-  Appointment with {{contact.first_name}}
+  Appointment
 </h4>
 <div class="set_appointment clearfix">
   <div class="date">
