--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -710,6 +710,9 @@ body > footer {
     h3 {
       margin-top: 0;
     }
+    h4 a, h4 a:link {
+      color: #fff;
+    }
   }
   .result {
     .fa-inverse {
