--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -11,16 +11,17 @@
   <li ui-sref-active="active">
     <a ui-sref="appointments"><i class="fa fa-calendar-o"></i></a>
   </li>
-  <!--
+  <li ui-sref-active="active">
+    <a ui-sref="calls"><i class="fa fa-history"></i></a>
+  </li>
   <li class="bottom">
     <ul class="list-unstyled">
       <li ui-sref-active="active">
         <a ui-sref="reports"><i class="fa fa-bar-chart"></i></a>
       </li>
-      <li ui-sref-active="active">
+      <!-- <li ui-sref-active="active">
         <a ui-sref="settings"><i class="fa fa-cogs"></i></a>
-      </li>
+      </li> -->
     </ul>
   </li>
-  -->
 </ul>
