callback for contacts

--- a/app/assets/javascripts/templates/call/must_callback_for_contacts.html.erb
+++ b/app/assets/javascripts/templates/call/must_callback_for_contacts.html.erb
@@ -22,7 +22,7 @@
           </a>
         </p>
         <p>
-          We talked on the phone the other day and you asked me to call you so you could suggest some people to me that you thought might appreciate the opportunity to know more about our team's ministry.
+          You asked me to call you back so you could suggest some people to me that you thought might appreciate the opportunity to know more about our team's ministry.
         </p>
       </div>
     </div>
@@ -51,7 +51,7 @@
     <div class="col-md-4 flow-box">
       <div class="flow-border"></div>
       <div class="flow-content">
-        <div class="response warning">Maybe</div>
+        <div class="response warning">Not Yet</div>
         Great, would I be able to give you a call back in <strong>[appropriate time]</strong>?
         <a ng-click="update_call('must_callback_for_contacts', 'must_callback')"
            class="btn btn-default btn-block">Setup Callback</a>
