--- a/app/assets/javascripts/templates/call/start_call.html.erb
+++ b/app/assets/javascripts/templates/call/start_call.html.erb
@@ -35,7 +35,7 @@
             Is this a good time to talk briefly?
           </p>
           <p>
-            We talked on the phone the other day and you asked me to call you so you could suggest some people to me that you thought might appreciate the opportunity to know more about our team's ministry.
+            You asked me to call you back so you could suggest some people to me that you thought might appreciate the opportunity to know more about our team's ministry.
           </p>
         </div>
       </div>
