--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -17,7 +17,7 @@
   <li class="bottom">
     <ul class="list-unstyled">
       <li ui-sref-active="active">
-        <a ui-sref="reports"><i class="fa fa-bar-chart"></i></a>
+        <a ui-sref="logs"><i class="fa fa-bar-chart"></i></a>
       </li>
       <!-- <li ui-sref-active="active">
         <a ui-sref="settings"><i class="fa fa-cogs"></i></a>
