--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header pull-right">
-      <a class="navbar-brand" href="#"><%= image_tag 'logo.png' %>DMPD</a>
+      <a class="navbar-brand" href="#">DMPD</a>
     </div>
     <div id="dmpd-navbar" ng-controller="TopbarController">
       <div class="call-session" ng-show="callSession.start_time">
@@ -11,7 +11,7 @@
           <i class="fa fa-times"></i>
         </a>
       </div>
-      <div class="nav-container">
+      <div class="nav-container" ng-class="{expanded: !callSession.start_time}">
         <ul class="nav navbar-nav topbar">
           <li ui-sref-active="active">
             <a class="contact new" ui-sref="contacts.new">
